--- a/app/src/main/res/menu/admin_bottom_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_menu.xml
@@ -13,6 +13,10 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="Ajouter" />
     <item
+        android:id="@+id/nav_assets"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="Serveurs" />
+    <item
         android:id="@+id/nav_profile"
         android:icon="@android:drawable/ic_menu_view"
         android:title="Profil" />
