--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple500">#9C27B0</color>
+        <color name="purple_200">#BB86FC</color>
+        <color name="purple_500">#6200EE</color>
+        <color name="purple_700">#3700B3</color>
+        <color name="error_red">#D32F2F</color>
+        <color name="surface_grey">#F5F7FA</color>
+        <color name="text_secondary">#757575</color>
 </resources>
